--- a/waybar/.config/waybar/colors.css
+++ b/waybar/.config/waybar/colors.css
@@ -1,7 +1,7 @@
 @define-color bg         #1e1e20;
-@define-color bg-light   #262628;
+@define-color bg-light   #27272a;
 @define-color fg         #eeeeee;
-@define-color inactive   #45464A; 
+@define-color inactive   #505052;
 @define-color red        #865054;
 @define-color green      #5f7a5f;
 @define-color blue       #5f7a8c;
