Added an icon on my clock.

--- a/waybar/.config/waybar/colors.css
+++ b/waybar/.config/waybar/colors.css
@@ -1,5 +1,5 @@
 @define-color bg         #1e1e20;
-@define-color bg-light   #252527;
+@define-color bg-light   #27272a;
 @define-color fg         #eeeeee;
 @define-color inactive   #505052;
 @define-color red        #865054;
