--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -2,7 +2,7 @@
 
 * {
     font-family: "JetBrainsMono Nerd Font";
-    font-size: 13pt;
+    font-size: 13.15pt;
     font-weight: 400
 }
 
@@ -30,15 +30,15 @@ window#waybar {
 
 #system {
     background: @bg-light;
-    border-radius: 7px;
-    border: 1px solid #47474a;
+    border-radius: 12px;
+    border: 1px solid @bg-light;
 }
 
 #workspaces {
     background: @bg-light;
-    border: 1px solid #47474a;
-    border-radius: 7px;
-    padding: 0 4 0 4px;
+    border: 1px solid @bg-light;
+    border-radius: 12px;
+    padding: 0px 4px 0px 4px;
 }
 
 #workspaces button {
@@ -71,7 +71,7 @@ window#waybar {
 
 #bluetooth {
     font-size: 13.25pt;
-    padding-right: 16px;
+    padding-right: 12px;
     color: @blue;
 }
 
@@ -83,9 +83,9 @@ window#waybar {
 
 #clock {
     background: @bg-light;
-    border: 1px solid #47474a;
+    border: 1px solid @bg-light;
     margin-left: 5px;
-    border-radius: 7px;
+    border-radius: 12px;
     padding-right: 10px;
     padding-left: 10px
 }
@@ -93,11 +93,11 @@ window#waybar {
 #custom-power {
     background-color: @bg;
     color: @red;
-    border: 1px solid #573437;
+    border: 2px solid #573437;
     margin-right: 5px;
-    border-radius: 7px;  
-    padding-right: 11px;
-    padding-left: 9px;
+    border-radius: 12px;  
+    padding-right: 10px;
+    padding-left: 8px;
     font-size: 13.25pt;
 }
 
