--- a/themes/.themes/Adwaita-Mono/gtk-4.0/gtk-dark.css
+++ b/themes/.themes/Adwaita-Mono/gtk-4.0/gtk-dark.css
@@ -21,12 +21,12 @@
 @define-color headerbar_fg_color white;
 @define-color headerbar_border_color #3f4044;
 @define-color headerbar_backdrop_color #1e1e20;
-@define-color headerbar_shade_color RGB(0 0 6/36%);
-@define-color headerbar_darker_shade_color RGB(0 0 12/90%);
+@define-color headerbar_shade_color #3f4044;
+@define-color headerbar_darker_shade_color #3f4044;
 @define-color sidebar_bg_color #252527;
 @define-color sidebar_fg_color white;
 @define-color sidebar_backdrop_color #252527;
-@define-color sidebar_shade_color RGB(0 0 6/25%);
+@define-color sidebar_shade_color #3f4044;
 @define-color sidebar_border_color #3f4044;
 @define-color secondary_sidebar_bg_color #252527;
 @define-color secondary_sidebar_fg_color white;
@@ -35,7 +35,7 @@
 @define-color secondary_sidebar_border_color #3f4044;
 @define-color card_bg_color RGB(255 255 255/8%);
 @define-color card_fg_color white;
-@define-color card_shade_color RGB(0 0 6/36%);
+@define-color card_shade_color #3f4044;
 @define-color dialog_bg_color #2a2a2c;
 @define-color dialog_fg_color white;
 @define-color popover_bg_color #2a2a2c;
