--- a/themes/.themes/Adwaita-Mono/gtk-3.0/gtk.css
+++ b/themes/.themes/Adwaita-Mono/gtk-3.0/gtk.css
@@ -53,7 +53,7 @@
 @define-color success_fg_color white;
 @define-color success_color @green_1;
 @define-color warning_bg_color #cd9309;
-@define-color warning_fg_color rgba(0, 0, 0, 0.8);
+@define-color warning_fg_color #3f4044;
 @define-color warning_color @yellow_2;
 @define-color error_bg_color @red_4;
 @define-color error_fg_color white;
@@ -66,7 +66,7 @@
 @define-color headerbar_fg_color white;
 @define-color headerbar_border_color white;
 @define-color headerbar_backdrop_color @window_bg_color;
-@define-color headerbar_shade_color rgba(0, 0, 6, 0.36);
+@define-color headerbar_shade_color #3f4044;
 @define-color headerbar_darker_shade_color rgba(0, 0, 6, 0.9);
 @define-color sidebar_bg_color #252527;
 @define-color sidebar_fg_color white;
