idk what i'm commiting rn

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,7 +1,7 @@
 @import url("./colors.css");
 
 * {
-    font-family: "JetBrainsMono Nerd Font";
+    font-family: "JetBrains Mono Nerd Font";
     font-size: 13.15pt;
     font-weight: 400;
 }
