--- a/swayosd/.config/swayosd/style.css
+++ b/swayosd/.config/swayosd/style.css
@@ -1,14 +1,6 @@
 window#osd {
-    background-color: #18181a; /* Semi-transparent black */
-    color: #ffffff; /* White text */
-    font-family: "JetBrainsMono Nerd Font", sans-serif;
-    font-size: 16px;
+    background-color: rgba(28, 28, 30, 0.8);
     border: 2px solid #3f4044;
     border-radius: 48px;
     padding: 10px;
-}
-progressbar {
-    min-height: 6px;
-    border-radius: 999px;
-    border: none;
 }
