--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,8 +1,8 @@
 @import url("./colors.css");
 
 * {
-    font-family: "JetBrains Mono Nerd Font";
-    font-size: 13.15pt;
+    font-family: "JetBrainsMono Nerd Font";
+    font-size: 13pt;
     font-weight: 400;
 }
 
