--- a/waybar/.config/waybar/colors.css
+++ b/waybar/.config/waybar/colors.css
@@ -7,4 +7,4 @@
 @define-color blue       #5f7a8c;
 @define-color cyan       #6a8b8b;
 @define-color yellow     #a4965f;
-@define-color lime       #8a9a59; 
+@define-color lime       #8e9760;
