--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -2,7 +2,7 @@
 
 * {
     font-family: "JetBrainsMono Nerd Font";
-    font-size: 13.15pt;
+    font-size: 13pt;
     font-weight: 400;
 }
 
@@ -68,18 +68,18 @@ window#waybar {
 #network {
     padding-right: 24px;
     padding-left: 11px;
-    font-size: 13.4pt;
+    font-size: 13.25pt;
     color: @cyan
 }
 
 #bluetooth {
-    font-size: 13.4pt;
+    font-size: 13.25pt;
     padding-right: 15px;
     color: @blue;
 }
 
 #pulseaudio {
-    font-size: 13.7pt;
+    font-size: 13.5pt;
     padding-right: 22px;
     color: @yellow
 }
@@ -101,11 +101,12 @@ window#waybar {
     border-radius: 12px;  
     padding-right: 10px;
     padding-left: 9px;
-    font-size: 13.4pt;
+    padding-bottom: 1px;
+    font-size: 13.25pt;
 }
 
 #battery {
     padding-right: 12px;
-    font-size: 13.4pt;
+    font-size: 13.25pt;
     color: @green
 }
