--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -29,20 +29,21 @@ window#waybar {
 }
 
 #system {
-    background: @bg;
+    background: @bg-light;
     border-radius: 12px;
-    border: 0px solid @inactive;
+    border: 1px solid @inactive;
 }
 
 #workspaces {
-    background: @bg;
+    background: @bg-light;
+    border: 1px solid @inactive;
     border-radius: 12px;
-    padding: 0px 0px 0px 0px;
+    padding: 0px 4px 0px 4px;
 }
 
 #workspaces button {
-    min-width: 18px;
-    padding: 0 9px;
+    min-width: 16px;
+    padding: 0 8px;
     color: @inactive;
 }
 
@@ -59,8 +60,9 @@ window#waybar {
 }
 
 #tray {
-    /* margin-left: 6px; */
-    /* margin-right: 6px; */
+    padding-top: 2px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 #network {
@@ -72,36 +74,39 @@ window#waybar {
 
 #bluetooth {
     font-size: 13.25pt;
-    padding-right: 18px;
+    padding-right: 17px;
     color: @blue;
 }
 
 #pulseaudio {
-    font-size: 13.5pt;
+    font-size: 13.6pt;
     padding-right: 22px;
     color: @yellow
 }
 
 #clock {
-    background: @bg;
+    background: @bg-light;
     margin-left: 6px;
-    border: 0px solid @inactive;
+    border: 1px solid @inactive;
     border-radius: 12px;
-    margin-left: 14px;
+    padding-right: 10px;
+    padding-left: 10px;
 }
 
 #custom-power {
-    background-color: @red;
-    color: @bg;
-    padding-right: 12px;
-    padding-left: 10px;
-    padding-bottom: 1px;
+    background-color: @bg-light;
+    color: @red;
+    border: 2px solid #573437;
     margin-right: 6px;
-    font-size: 13.5pt;
+    border-radius: 12px;  
+    padding-right: 10px;
+    padding-left: 9px;
+    padding-bottom: 1px;
+    font-size: 13.25pt;
 }
 
 #battery {
-    padding-right: 10px;
+    padding-right: 12px;
     font-size: 13.25pt;
     color: @green
 }
