--- a/themes/.themes/Adwaita-Mono/gtk-3.0/gtk-dark.css
+++ b/themes/.themes/Adwaita-Mono/gtk-3.0/gtk-dark.css
@@ -43,9 +43,9 @@
 @define-color dark_3 #3d3846;
 @define-color dark_4 #241f31;
 @define-color dark_5 #000000;
-@define-color accent_bg_color @blue_3;
+@define-color accent_bg_color #8a8a8c;
 @define-color accent_fg_color white;
-@define-color accent_color #1b82b3;
+@define-color accent_color #8a8a8c;
 @define-color destructive_bg_color @red_4;
 @define-color destructive_fg_color white;
 @define-color destructive_color #ff7b63;
@@ -58,17 +58,17 @@
 @define-color error_bg_color @red_4;
 @define-color error_fg_color white;
 @define-color error_color #ff7b63;
-@define-color window_bg_color #232325;
+@define-color window_bg_color #252527;
 @define-color window_fg_color white;
 @define-color view_bg_color #1e1e20;
 @define-color view_fg_color white;
-@define-color headerbar_bg_color #232325;
+@define-color headerbar_bg_color #252527;
 @define-color headerbar_fg_color white;
 @define-color headerbar_border_color white;
 @define-color headerbar_backdrop_color @window_bg_color;
 @define-color headerbar_shade_color #3f4044;
 @define-color headerbar_darker_shade_color rgba(0, 0, 6, 0.9);
-@define-color sidebar_bg_color #232325;
+@define-color sidebar_bg_color #252527;
 @define-color sidebar_fg_color white;
 @define-color sidebar_backdrop_color #28282c;
 @define-color sidebar_shade_color rgba(0, 0, 6, 0.25);
