--- a/themes/.themes/Adwaita-Mono/gtk-4.0/gtk-dark.css
+++ b/themes/.themes/Adwaita-Mono/gtk-4.0/gtk-dark.css
@@ -7,8 +7,8 @@
 @define-color warning_fg_color RGB(0 0 0 / 80%);
 @define-color error_bg_color @red_4;
 @define-color error_fg_color white;
-@define-color accent_color #1b82b3;
-@define-color accent_bg_color #1b82b3;
+@define-color accent_color #8a8a8c;
+@define-color accent_bg_color #8a8a8c;
 @define-color destructive_color oklab(from @destructive_bg_color max(l, 0.85) a b);
 @define-color success_color oklab(from @success_bg_color max(l, 0.85) a b);
 @define-color warning_color oklab(from @warning_bg_color max(l, 0.85) a b);
@@ -17,20 +17,20 @@
 @define-color window_fg_color white;
 @define-color view_bg_color #1e1e20;
 @define-color view_fg_color white;
-@define-color headerbar_bg_color #232325;
+@define-color headerbar_bg_color #252527;
 @define-color headerbar_fg_color white;
 @define-color headerbar_border_color #3f4044;
 @define-color headerbar_backdrop_color #1e1e20;
 @define-color headerbar_shade_color #3f4044;
 @define-color headerbar_darker_shade_color #3f4044;
-@define-color sidebar_bg_color #232325;
+@define-color sidebar_bg_color #252527;
 @define-color sidebar_fg_color white;
-@define-color sidebar_backdrop_color #232325;
+@define-color sidebar_backdrop_color #252527;
 @define-color sidebar_shade_color #3f4044;
 @define-color sidebar_border_color #3f4044;
-@define-color secondary_sidebar_bg_color #232325;
+@define-color secondary_sidebar_bg_color #252527;
 @define-color secondary_sidebar_fg_color white;
-@define-color secondary_sidebar_backdrop_color #232325;
+@define-color secondary_sidebar_backdrop_color #252527;
 @define-color secondary_sidebar_shade_color #3f4044;
 @define-color secondary_sidebar_border_color #3f4044;
 @define-color card_bg_color RGB(255 255 255/8%);
