--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -69,7 +69,7 @@ window#waybar {
     padding-right: 24px;
     padding-left: 11px;
     font-size: 13.25pt;
-    color: @fg
+    color: @cyan
 }
 
 #bluetooth {
@@ -81,11 +81,11 @@ window#waybar {
 #pulseaudio {
     font-size: 13.5pt;
     padding-right: 22px;
-    color: @fg
+    color: @yellow
 }
 
 #clock {
-    color: @fg;
+    color: @lime;
     background: @bg-light;
     margin-left: 6px;
     border: 1px solid @inactive;
@@ -96,7 +96,7 @@ window#waybar {
 
 #custom-power {
     background-color: @bg-light;
-    color: @fg;
+    color: @red;
     border: 2px solid #573437;
     margin-right: 6px;
     border-radius: 12px;  
@@ -109,5 +109,5 @@ window#waybar {
 #battery {
     padding-right: 12px;
     font-size: 13.25pt;
-    color: @fg
+    color: @green
 }
