--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,8 +1,8 @@
 @import url("./colors.css");
 
 * {
-    font-family: "JetBrainsMono Nerd Font";
-    font-size: 13pt;
+    font-family: "Rubik";
+    font-size: 14pt;
     font-weight: 400;
 }
 
