--- a/waybar/.config/waybar/colors.css
+++ b/waybar/.config/waybar/colors.css
@@ -5,7 +5,7 @@
 @define-color red        #865054;
 @define-color green      #5f7a5f;
 @define-color blue       #5f7a8c;
-@define-color magenta    #75607a;
+@define-color magenta    #a277a2;
 @define-color cyan       #6a8b8b;
 @define-color yellow     #a4965f;
 @define-color lime       #8e9760;
