--- a/waybar/.config/waybar/colors.css
+++ b/waybar/.config/waybar/colors.css
@@ -5,7 +5,15 @@
 @define-color red        #865054;
 @define-color green      #5f7a5f;
 @define-color blue       #5f7a8c;
-@define-color magenta    #a277a2;
+@define-color magenta    #8c729a;
 @define-color cyan       #6a8b8b;
 @define-color yellow     #a4965f;
 @define-color lime       #8e9760;
+@define-color bright-bg       #252527;
+@define-color bright-red      #976061;
+@define-color bright-green    #729a72;
+@define-color bright-yellow   #a49a72;
+@define-color bright-cyan     #729a96;
+@define-color bright-magenta  #8c729a;
+@define-color bright-blue     #72949a;
+@define-color bright-fg       #f1f1f1;
