Changed up colors in the Hyprland configuration as well.

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -47,7 +47,7 @@ window#waybar {
 }
 
 #workspaces button.active {
-    color: @lime;
+    color: @bright-magenta;
 }
 
 #workspaces button.focused {
