--- a/themes/.themes/Adwaita-Mono/gtk-3.0/gtk.css
+++ b/themes/.themes/Adwaita-Mono/gtk-3.0/gtk.css
@@ -67,13 +67,13 @@
 @define-color headerbar_border_color white;
 @define-color headerbar_backdrop_color @window_bg_color;
 @define-color headerbar_shade_color #3f4044;
-@define-color headerbar_darker_shade_color rgba(0, 0, 6, 0.9);
+@define-color headerbar_darker_shade_color #1e1e20;
 @define-color sidebar_bg_color #252527;
 @define-color sidebar_fg_color white;
 @define-color sidebar_backdrop_color #28282c;
-@define-color sidebar_shade_color rgba(0, 0, 6, 0.25);
-@define-color sidebar_border_color rgba(0, 0, 6, 0.36);
-@define-color card_bg_color rgba(255, 255, 255, 0.08);
+@define-color sidebar_shade_color #3f4044;
+@define-color sidebar_border_color #3f4044;
+@define-color card_bg_color #3f4044;
 @define-color card_fg_color white;
 @define-color card_shade_color rgba(0, 0, 6, 0.36);
 @define-color dialog_bg_color #2a2a2c;
