--- a/waybar/.config/waybar/colors.css
+++ b/waybar/.config/waybar/colors.css
@@ -1,6 +1,6 @@
 @define-color bg         #1e1e20;
 @define-color bg-light   #252527;
-@define-color fg         #dddddf;
+@define-color fg         #d1d1d3;
 @define-color inactive   #454547;
 @define-color red        #865054;
 @define-color green      #5f7a5f;
