--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -34,7 +34,7 @@ window#waybar {
 }
 
 #workspaces {
-    background-color: #252527;
+    background-color: @bright-bg;
     border-radius: 12px;
     border: 1px solid @inactive;
     padding: 0px 2px 0px 2px;
@@ -84,10 +84,7 @@ window#waybar {
 }
 
 #clock {
-    color: @yellow;
-    background: @bright-bg;
-    margin-left: 6px;
-    border: 1px solid @inactive;
+    color: @fg;
     border-radius: 12px;
     padding-right: 10px;
     padding-left: 10px;
@@ -107,13 +104,13 @@ window#waybar {
 
 #custom-menu {
     background-color: @bright-bg;
-    border: 1px solid @active;
-    padding-left: 10px;
-    padding-right: 14px;
-    border: 1px solid @inactive;
+    color: @blue;
+    padding-left: 8px;
+    padding-right: 12px;
+    border: 2px solid #303d46;
     border-radius: 12px;
     margin-left: 6px;
-    font-size: 15pt;
+    font-size: 14pt;
 }
 
 #battery {
