--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,7 +1,7 @@
 @import url("./colors.css");
 
 * {
-    font-family: "JetBrainsMono Nerd Font";
+    font-family: "MesloLGS Nerd Font";
     font-size: 13pt;
     font-weight: 400;
 }
