--- a/themes/.themes/Adwaita-Mono/gtk-3.0/gtk.css
+++ b/themes/.themes/Adwaita-Mono/gtk-3.0/gtk.css
@@ -1770,13 +1770,25 @@ infobar selection { background-color: shade(@window_bg_color,0.9); }
 
 infobar *:link { color: @accent_color; }
 
-tooltip { padding: 4px; border-radius: 8px; box-shadow: none; text-shadow: 0 1px black; }
-
-tooltip.background { background-color: #2a2a2c; background-clip: padding-box; border: 1px solid #383839; }
-
-tooltip decoration { background-color: transparent; }
-
-tooltip * { padding: 4px; background-color: transparent; color: white; }
+tooltip {
+  padding: 6px 10px;
+  border-radius: 9px;
+  box-shadow: none;
+  text-shadow: 0 1px black;
+}
+tooltip.background {
+  background-color: rgba(0, 0, 0, 0.8);
+  background-clip: padding-box;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+}
+tooltip decoration {
+  background-color: transparent;
+}
+tooltip * {
+  padding: 4px;
+  background-color: transparent;
+  color: white;
+}
 
 colorswatch:drop(active), colorswatch { border-style: none; }
 
