i don't even know what i'm commiting right now.

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -33,10 +33,14 @@ window#waybar {
 
 #workspaces button.active {
     color: @lime;
+    font-weight: bold;
+    text-decoration: underline;
 }
 
 #workspaces button.focused {
     color: @lime;
+    font-weight: bold;
+    text-decoration: underline;
 }
 
 #workspaces button:hover {
