--- a/themes/.themes/Adwaita-Mono/gtk-3.0/gtk-dark.css
+++ b/themes/.themes/Adwaita-Mono/gtk-3.0/gtk-dark.css
@@ -1,6 +1,6 @@
 @define-color blue_1 #99c1f1;
 @define-color blue_2 #62a0ea;
-@define-color blue_3 #7a7a7c;
+@define-color blue_3 #7c7c7c;
 @define-color blue_4 #1c71d8;
 @define-color blue_5 #1a5fb4;
 @define-color green_1 #8ff0a4;
@@ -43,7 +43,7 @@
 @define-color dark_3 #3d3846;
 @define-color dark_4 #241f31;
 @define-color dark_5 #000000;
-@define-color accent_bg_color #7a7a7c;
+@define-color accent_bg_color #7c7c7c;
 @define-color accent_fg_color white;
 @define-color accent_color #8a8a8c;
 @define-color destructive_bg_color @red_4;
@@ -53,35 +53,35 @@
 @define-color success_fg_color white;
 @define-color success_color @green_1;
 @define-color warning_bg_color #cd9309;
-@define-color warning_fg_color #3f4044;
+@define-color warning_fg_color #323232;
 @define-color warning_color @yellow_2;
 @define-color error_bg_color @red_4;
 @define-color error_fg_color white;
 @define-color error_color #ff7b63;
-@define-color window_bg_color #252527;
+@define-color window_bg_color #232323;
 @define-color window_fg_color white;
-@define-color view_bg_color #1e1e20;
+@define-color view_bg_color #1c1c1c;
 @define-color view_fg_color white;
-@define-color headerbar_bg_color #252527;
+@define-color headerbar_bg_color #232323;
 @define-color headerbar_fg_color white;
 @define-color headerbar_border_color white;
 @define-color headerbar_backdrop_color @window_bg_color;
-@define-color headerbar_shade_color #3f4044;
-@define-color headerbar_darker_shade_color #1e1e20;
-@define-color sidebar_bg_color #252527;
+@define-color headerbar_shade_color #323232;
+@define-color headerbar_darker_shade_color #1c1c1c;
+@define-color sidebar_bg_color #232323;
 @define-color sidebar_fg_color white;
 @define-color sidebar_backdrop_color #28282c;
-@define-color sidebar_shade_color #3f4044;
-@define-color sidebar_border_color #3f4044;
-@define-color card_bg_color #3f4044;
+@define-color sidebar_shade_color #323232;
+@define-color sidebar_border_color #323232;
+@define-color card_bg_color #323232;
 @define-color card_fg_color white;
 @define-color card_shade_color rgba(0, 0, 6, 0.36);
-@define-color dialog_bg_color #2a2a2c;
+@define-color dialog_bg_color #2d2d2d;
 @define-color dialog_fg_color white;
-@define-color popover_bg_color #2a2a2c;
+@define-color popover_bg_color #2d2d2d;
 @define-color popover_fg_color white;
 @define-color popover_shade_color rgba(0, 0, 6, 0.25);
-@define-color thumbnail_bg_color #39393d;
+@define-color thumbnail_bg_color #383838;
 @define-color thumbnail_fg_color white;
 @define-color shade_color rgba(0, 0, 6, 0.25);
 @define-color scrollbar_outline_color rgba(0, 0, 12, 0.95);
