Made waybar compact as hell.

--- a/waybar/.config/waybar/colors.css
+++ b/waybar/.config/waybar/colors.css
@@ -1,5 +1,5 @@
 @define-color bg         #1c1c1c;
-@define-color fg         #d2d2d2;
+@define-color fg         #dfdfdf;
 @define-color inactive   #404042;
 @define-color red        #865054;
 @define-color green      #5f7a5f;
