--- a/themes/.themes/Adwaita-Mono/gtk-4.0/gtk-dark.css
+++ b/themes/.themes/Adwaita-Mono/gtk-4.0/gtk-dark.css
@@ -1,12 +1,12 @@
 /* GTK NAMED COLORS ---------------- use responsibly! */
 @define-color destructive_bg_color @red_4;
-@define-color destructive_fg_color #d2d2d2;
+@define-color destructive_fg_color #dfdfdf;
 @define-color success_bg_color @green_5;
-@define-color success_fg_color #d2d2d2;
+@define-color success_fg_color #dfdfdf;
 @define-color warning_bg_color #cd9309;
 @define-color warning_fg_color RGB(0 0 0 / 80%);
 @define-color error_bg_color @red_4;
-@define-color error_fg_color #d2d2d2;
+@define-color error_fg_color #dfdfdf;
 @define-color accent_color #8c8c8c;
 @define-color accent_bg_color #7a7a7c;
 @define-color destructive_color oklab(from @destructive_bg_color max(l, 0.85) a b);
@@ -14,40 +14,40 @@
 @define-color warning_color oklab(from @warning_bg_color max(l, 0.85) a b);
 @define-color error_color oklab(from @error_bg_color max(l, 0.85) a b);
 @define-color window_bg_color #232323;
-@define-color window_fg_color #d2d2d2;
+@define-color window_fg_color #dfdfdf;
 @define-color view_bg_color #1c1c1c;
-@define-color view_fg_color #d2d2d2;
+@define-color view_fg_color #dfdfdf;
 @define-color headerbar_bg_color #232323;
-@define-color headerbar_fg_color #d2d2d2;
+@define-color headerbar_fg_color #dfdfdf;
 @define-color headerbar_border_color #323232;
 @define-color headerbar_backdrop_color #1c1c1c;
 @define-color headerbar_shade_color #323232;
 @define-color headerbar_darker_shade_color #323232;
 @define-color sidebar_bg_color #232323;
-@define-color sidebar_fg_color #d2d2d2;
+@define-color sidebar_fg_color #dfdfdf;
 @define-color sidebar_backdrop_color #232323;
 @define-color sidebar_shade_color #323232;
 @define-color sidebar_border_color #323232;
 @define-color secondary_sidebar_bg_color #232323;
-@define-color secondary_sidebar_fg_color #d2d2d2;
+@define-color secondary_sidebar_fg_color #dfdfdf;
 @define-color secondary_sidebar_backdrop_color #232323;
 @define-color secondary_sidebar_shade_color #323232;
 @define-color secondary_sidebar_border_color #323232;
 @define-color card_bg_color RGB(255 255 255/8%);
-@define-color card_fg_color #d2d2d2;
+@define-color card_fg_color #dfdfdf;
 @define-color card_shade_color #323232;
 @define-color dialog_bg_color #2c2c2c;
-@define-color dialog_fg_color #d2d2d2;
+@define-color dialog_fg_color #dfdfdf;
 @define-color popover_bg_color #2c2c2c;
-@define-color popover_fg_color #d2d2d2;
+@define-color popover_fg_color #dfdfdf;
 @define-color popover_shade_color RGB(0 0 6/25%);
 @define-color thumbnail_bg_color #1c1c1c;
-@define-color thumbnail_fg_color #d2d2d2;
+@define-color thumbnail_fg_color #dfdfdf;
 @define-color shade_color RGB(0 0 6/25%);
 @define-color scrollbar_outline_color RGB(0 0 12/95%);
 
 * {
-    color: #d2d2d2;
+    color: #dfdfdf;
 }
 
 :root { --standalone-color-oklab: max(l, 0.85) a b; --accent-color: oklab(
@@ -60,7 +60,7 @@
     from var(--warning-bg-color) var(--standalone-color-oklab)
   ); --error-color: oklab(
     from var(--error-bg-color) var(--standalone-color-oklab)
-  ); --active-toggle-bg-color: rgb(255 255 255 / 20%); --active-toggle-fg-color: #d2d2d2; --overview-bg-color: #2c2c2c; --overview-fg-color: #d2d2d2; }
+  ); --active-toggle-bg-color: rgb(255 255 255 / 20%); --active-toggle-fg-color: #dfdfdf; --overview-bg-color: #2c2c2c; --overview-fg-color: #dfdfdf; }
 
 @import '../gtk-3.0/libadwaita.css';
 @import '../gtk-3.0/libadwaita-tweaks.css';
