--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -32,7 +32,7 @@ window#waybar {
 }
 
 #tray {
-   padding-right: 6px;
+   padding-right: 0px;
 }
 
 #pulseaudio {
@@ -42,6 +42,10 @@ window#waybar {
 }
 
 #clock {
-    padding-left: 2px;
-    padding-right: 4px;
+    padding-left: 4px;
+    padding-right: 8px;
+}
+
+#battery {
+    padding-left: 6px;
 }
