Added empty workspace colors.

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -18,6 +18,10 @@ window#waybar {
     color: @fg;
 }
 
+#workspaces button.empty {
+    color: #595959;
+}
+
 #workspaces button:hover {
     background: transparent;
 }
