Added some lf scripts.

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,26 +1,25 @@
 @import url("./colors.css");
 
 window#waybar {
-    font: 13pt "MesloLGS Nerd Font";
-    color: @fg;
+    font: 13.5pt "MesloLGS Nerd Font";
+    color: #afafaf;
     background-color: @bg;
     border-bottom: 1px solid @inactive
 }
 
+#window {
+    padding-left: 3pt
+}
+
 #workspaces button {
-    color: @fg;
+    font-size: 13pt;
+    color: #afafaf;
     min-width: 10px;
     padding: 0 6px;
-    font-size: 12.5pt;
-    padding-bottom: 0.5px
 }
 
 #workspaces button.active {
-    color: @fg;
-}
-
-#workspaces button.empty {
-    color: #595959;
+    border-radius: 0;
 }
 
 #workspaces button:hover {
@@ -29,7 +28,7 @@ window#waybar {
 
 #custom-expand-icon {
     font-size: 12pt;
-    margin-right: 10pt;
+    margin-right: 9pt;
 }
 
 #tray {
@@ -38,7 +37,7 @@ window#waybar {
 }
 
 #network {
-    padding-right: 17pt;
+    padding-right: 16pt;
 }
 
 #pulseaudio {
