Added genuine NixOS configurations.

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -3,7 +3,7 @@
 window#waybar {
     font: 13.5pt "MesloLGS Nerd Font";
     background-color: @bg;
-    border-bottom: 1px solid @inactive
+    border-bottom: 1px solid lighter(@bright-bg)
 }
 
 #window {
