--- a/themes/.themes/Adwaita-Mono/gtk-3.0/gtk.css
+++ b/themes/.themes/Adwaita-Mono/gtk-3.0/gtk.css
@@ -45,7 +45,7 @@
 @define-color dark_5 #000000;
 @define-color accent_bg_color #7c7c7c;
 @define-color accent_fg_color #dfdfdf;
-@define-color accent_color #8a8a8c;
+@define-color accent_color #9f9f9f;
 @define-color destructive_bg_color @red_4;
 @define-color destructive_fg_color #dfdfdf;
 @define-color destructive_color #ff7b63;
